WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46317
[EFL] Fix build due to latest EFL (Edje) changes.
https://bugs.webkit.org/show_bug.cgi?id=46317
Summary
[EFL] Fix build due to latest EFL (Edje) changes.
Rafael Antognolli
Reported
2010-09-22 15:54:29 PDT
[EFL] Fix build due to latest EFL (Edje) changes.
Attachments
Patch
(3.36 KB, patch)
2010-09-22 15:56 PDT
,
Rafael Antognolli
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Antognolli
Comment 1
2010-09-22 15:56:07 PDT
Created
attachment 68461
[details]
Patch
WebKit Commit Bot
Comment 2
2010-09-22 18:31:56 PDT
Comment on
attachment 68461
[details]
Patch Clearing flags on attachment: 68461 Committed
r68110
: <
http://trac.webkit.org/changeset/68110
>
WebKit Commit Bot
Comment 3
2010-09-22 18:32:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug